--- a/styles/style.css
+++ b/styles/style.css
@@ -10,10 +10,10 @@ html {
 }
 
 body {
-  margin: auto;
+  margin: 0px;
   background-color: #1e1e1e;
-  font-family: "Inter regular", sans-serif;
-  height: inherit;
+  font-family: Raleway, sans-serif;
+  /* height: inherit; */
   position: relative;
   /* пока не верстаем под мобильные устройства */
   min-width: 800px;
@@ -43,13 +43,13 @@ video {
   object-position: center;
   position: absolute;
   top: 0;
-  z-index: -2;
+  z-index: 0;
 }
 
 .page__heading {
   color: #000;
   text-align: center;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 116px;
   font-style: normal;
   font-weight: 800;
@@ -57,7 +57,7 @@ video {
   letter-spacing: 4.06px;
   text-transform: uppercase;
   margin: 60px 430px;
-  z-index: 2;
+  z-index: 1;
 }
 
 .page__heading:hover::before {
@@ -68,7 +68,7 @@ video {
   background: #fff;
 
   color: #000;
-  font-family: Raleway;
+  font-family: Raleway, sans-serif;
   font-size: 35px;
   font-style: normal;
   font-weight: 400;
