--- a/styles/style.css
+++ b/styles/style.css
@@ -54,7 +54,7 @@ video {
   line-height: normal;
   letter-spacing: 4.06px;
   text-transform: uppercase;
-  /* margin: 60px 430px; */
+  margin-top: 60px;
   z-index: 1;
 }
 
